Web Inspector: "Selected Element" is hard to read when searching for "Element" https://bugs.webkit.org/show_bug.cgi?id=157542 <rdar://problem/26207464>
Reviewed by Timothy Hatcher.

Change the style of highlighted text to match Xcode.

* UserInterface/Views/LogContentView.css:
(.search-in-progress .console-item:not(.filtered-out-by-search).special-user-log .console-message-text .highlighted):
* UserInterface/Views/OpenResourceDialog.css:
(.open-resource-dialog > .tree-outline .item.selected .highlighted):
* UserInterface/Views/Variables.css:
(:root):


Canonical link: https://commits.webkit.org/175727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200709 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/LogContentView.css
+++ b/Source/WebInspectorUI/UserInterface/Views/LogContentView.css
@@ -199,6 +199,14 @@
     background-color: hsla(53, 83%, 53%, 0.75);
 }
 
+.search-in-progress .console-item:not(.filtered-out-by-search).special-user-log .console-message-text .highlighted {
+    color: var(--selected-foreground-color);
+    background-color: var(--selected-background-color-highlight);
+
+    border-bottom: none;
+    text-decoration: underline;
+}
+
 .console-user-command::before,
 .console-messages:focus .console-item.selected .console-user-command::before,
 .console-user-command-result.console-log-level::before,
