--- a/Source/WebInspectorUI/UserInterface/Views/Variables.css
+++ b/Source/WebInspectorUI/UserInterface/Views/Variables.css
@@ -36,6 +36,7 @@
     --selected-background-color: hsl(212, 92%, 54%);
     --selected-background-color-active: hsl(218, 85%, 52%);
     --selected-background-color-hover: hsla(212, 92%, 54%, 0.5);
+    --selected-background-color-highlight: hsla(0, 0%, 100%, 0.3);
 
     --glyph-color: hsl(0, 0%, 30%);
     --glyph-color-pressed: hsl(0, 0%, 15%);
